abort and generator

--- a/notes/index.html
+++ b/notes/index.html
@@ -29,6 +29,12 @@
       <li>
         <a href="/notes/proxy.html">Proxy</a>
       </li>
+      <li>
+        <a href="/notes/generators.html">Generators</a>
+      </li>
+      <li>
+        <a href="/notes/abort-fetch.html">abort-fetch</a>
+      </li>
     </ol>
   </body>
 </html>
